fixing hamburger menu icon and hero height on mobile

--- a/src/styles/partials/_base.scss
+++ b/src/styles/partials/_base.scss
@@ -80,6 +80,7 @@ img {
 
 .img-fullwidth {
   width: 100%;
+  min-height: 355px;
   display: block;
 }
 
